Use translation from both common and user libs in dashboard and contributor
- add and configure ngx-translate-multi-http-loader
- move onboarding translations to user lib

--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -31,8 +31,13 @@
           },
           {
             "glob": "**/*",
-            "input": "apps/dashboard/src/assets/i18n",
-            "output": "assets/i18n"
+            "input": "libs/common/src/assets/i18n",
+            "output": "assets/i18n/common"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/user/src/assets/i18n",
+            "output": "assets/i18n/user"
           },
           {
             "glob": "**/*",
@@ -85,8 +90,13 @@
             },
             {
               "glob": "**/*",
-              "input": "apps/dashboard/src/assets/i18n",
-              "output": "assets/i18n"
+              "input": "libs/common/src/assets/i18n",
+              "output": "assets/i18n/common"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/user/src/assets/i18n",
+              "output": "assets/i18n/user"
             },
             {
               "glob": "**/*",
@@ -119,8 +129,13 @@
             },
             {
               "glob": "**/*",
-              "input": "apps/dashboard/src/assets/i18n",
-              "output": "assets/i18n"
+              "input": "libs/common/src/assets/i18n",
+              "output": "assets/i18n/common"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/user/src/assets/i18n",
+              "output": "assets/i18n/user"
             },
             {
               "glob": "**/*",
@@ -153,8 +168,13 @@
             },
             {
               "glob": "**/*",
-              "input": "apps/dashboard/src/assets/i18n",
-              "output": "assets/i18n"
+              "input": "libs/common/src/assets/i18n",
+              "output": "assets/i18n/common"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/user/src/assets/i18n",
+              "output": "assets/i18n/user"
             },
             {
               "glob": "**/*",
