--- a/libs/user/project.json
+++ b/libs/user/project.json
@@ -2,7 +2,7 @@
   "name": "user",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/user/src",
-  "prefix": "nuclia",
+  "prefix": "nus",
   "tags": [],
   "projectType": "library",
   "targets": {
