--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "crypto": "^1.0.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
+    "deepmerge-ts": "^5.1.0",
     "electron-updater": "^5.0.1",
     "express": "^4.18.2",
     "fuse.js": "^3.6.1",
@@ -69,6 +70,7 @@
     "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
+    "ngx-translate-multi-http-loader": "^16.0.1",
     "node-fetch": "^3.3.1",
     "papaparse": "^5.4.1",
     "perfect-scrollbar": "^1.5.0",
