--- a/apps/contributor/project.json
+++ b/apps/contributor/project.json
@@ -34,7 +34,12 @@
           {
             "glob": "**/*",
             "input": "libs/common/src/assets/i18n",
-            "output": "assets/i18n"
+            "output": "assets/i18n/common"
+          },
+          {
+            "glob": "**/*",
+            "input": "libs/user/src/assets/i18n",
+            "output": "assets/i18n/user"
           },
           {
             "glob": "**/*",
@@ -85,7 +90,12 @@
             {
               "glob": "**/*",
               "input": "libs/common/src/assets/i18n",
-              "output": "assets/i18n"
+              "output": "assets/i18n/common"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/user/src/assets/i18n",
+              "output": "assets/i18n/user"
             },
             {
               "glob": "**/*",
@@ -125,7 +135,12 @@
             {
               "glob": "**/*",
               "input": "libs/common/src/assets/i18n",
-              "output": "assets/i18n"
+              "output": "assets/i18n/common"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/user/src/assets/i18n",
+              "output": "assets/i18n/user"
             },
             {
               "glob": "**/*",
