Upload sourcempas to Sentry

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ Thumbs.db
 /libs/pastanaga-angular/
 /libs/chrome-ext/src/lib/vendor
 /libs/sdk-core/protobuf/build
+
+# Sentry Auth Token
+.sentryclirc
