--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -285,6 +285,9 @@ jobs:
           npx nx build desktop-electron --configuration production
           npx tsc -p apps/desktop/electron/tsconfig.server.json
           cp -r dist/service ./dist/apps/desktop-electron/assets
+      - name: Upload sourcemaps to Sentry
+        if: startsWith(matrix.os, 'macos')
+        run: yarn run sentry:sourcemaps
       - name: Install the Apple certificate
         if: startsWith(matrix.os, 'macos')
         env:
