--- a/apps/desktop/project.json
+++ b/apps/desktop/project.json
@@ -44,6 +44,7 @@
         "production": {
           "baseHref": "./",
           "outputHashing": "all",
+          "sourceMap": true,
           "serviceWorker": false,
           "fileReplacements": [
             {
