--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -277,6 +277,7 @@ jobs:
           npx replace-in-file __SENTRY_URL__ ${{ secrets.SENTRY_URL }} ./apps/desktop/electron/src/environments/environment.prod.ts
           npx replace-in-file __SENTRY_URL__ ${{ secrets.SENTRY_URL }} ./apps/desktop/src/environments_config/production/app-config.json
           npx replace-in-file __SENTRY_RELEASE__ ${{ github.sha }} ./apps/desktop/electron/src/environments/environment.prod.ts
+          npx replace-in-file __SENTRY_RELEASE__ ${{ github.sha }} ./apps/desktop/src/environments_config/production/app-config.json
           npx nx build desktop --configuration production
           npx replace-in-file __VERSION__ ${{ github.sha }} ./dist/apps/desktop/assets/deployment/app-config.json
       - name: Build electron app
@@ -284,6 +285,9 @@ jobs:
           npx nx build desktop-electron --configuration production
           npx tsc -p apps/desktop/electron/tsconfig.server.json
           cp -r dist/service ./dist/apps/desktop-electron/assets
+      - name: Upload sourcemaps to Sentry
+        if: startsWith(matrix.os, 'macos')
+        run: yarn run sentry:sourcemaps
       - name: Install the Apple certificate
         if: startsWith(matrix.os, 'macos')
         env:
