--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@nxext/vite": "15.1.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@sentry/angular": "latest",
+    "@sentry/angular": "7.60.0",
     "@sentry/electron": "^4.8.0",
     "@sentry/node": "^7.60.0",
     "@sentry/tracing": "^7.2.0",
+    "@sentry/utils": "7.60.0",
     "@sveltejs/kit": "^1.15.2",
     "@sveltejs/package": "^2.0.2",
     "algoliasearch": "^4.13.1",
