--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "latinize": "^0.5.0",
     "localstorage-polyfill": "^1.0.1",
-    "mime": "^3.0.0",
+    "mime": "4.0.0-beta.1",
     "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
