--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "latinize": "^0.5.0",
     "localstorage-polyfill": "^1.0.1",
-    "mime": "4.0.0-beta.1",
+    "mime": "3.0.0",
     "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
@@ -151,9 +151,9 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-svelte": "^2.30.0",
     "exitzero": "^1.0.1",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "13.1.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-preset-angular": "13.1.2",
     "ng-mocks": "14.11.0",
     "ng-packagr": "16.2.0",
     "nodemon": "^2.0.22",
