[sc-7186] upgrade mime to ESM compatible version (#1019)
* Upgrade mime to use ESM module

* Update latinize typings

* back to mime 3

I didn't find a way to fix the tests which were broken when moving to mime v4.0.0-beta.1, so better to revert for now

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "latinize": "^0.5.0",
     "localstorage-polyfill": "^1.0.1",
-    "mime": "^3.0.0",
+    "mime": "3.0.0",
     "mime-types": "^2.1.35",
     "mrs-developer": "^1.7.1",
     "ngx-captcha": "^12.0.2",
@@ -125,7 +125,7 @@
     "@types/jasmine": "4.0.3",
     "@types/jest": "29.5.2",
     "@types/jexl": "^2.2.0",
-    "@types/latinize": "^0.2.15",
+    "@types/latinize": "^0.2.16",
     "@types/lru-cache": "^5.1.0",
     "@types/mime-types": "^2.1.1",
     "@types/node": "18.7.1",
@@ -151,9 +151,9 @@
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-svelte": "^2.30.0",
     "exitzero": "^1.0.1",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.4.3",
-    "jest-preset-angular": "13.1.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-preset-angular": "13.1.2",
     "ng-mocks": "14.11.0",
     "ng-packagr": "16.2.0",
     "nodemon": "^2.0.22",
