Upgrade to svelte 4
- adapt configuration to be ESM instead of commonJS
- replace jest by vitest for testing search-widget lib

--- a/libs/search-widget/project.json
+++ b/libs/search-widget/project.json
@@ -27,11 +27,9 @@
       }
     },
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/libs/search-widget"],
+      "executor": "nx:run-commands",
       "options": {
-        "jestConfig": "libs/search-widget/jest.config.js",
-        "passWithNoTests": true
+        "command": "vitest -r=libs/search-widget --run"
       }
     }
   }
