--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "nx run-many --all --target=test",
+    "test:search-lib": "vitest -r=libs/search-widget",
     "lint": "nx workspace-lint && ng lint",
     "update": "nx migrate latest",
     "help": "nx help",
@@ -112,8 +113,9 @@
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@schematics/angular": "16.2.0",
-    "@sveltejs/vite-plugin-svelte": "^1.4.0",
-    "@testing-library/svelte": "^3.2.2",
+    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/svelte": "^4.0.3",
     "@tsconfig/svelte": "^4.0.1",
     "@types/core-js": "^2.5.4",
     "@types/cors": "^2.8.13",
@@ -132,6 +134,7 @@
     "@types/papaparse": "^5.3.7",
     "@types/perfect-scrollbar": "^1.3.0",
     "@types/spark-md5": "^3.0.2",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@types/turndown": "^5.0.1",
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
@@ -154,6 +157,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "13.1.2",
+    "jsdom": "^22.1.0",
     "ng-mocks": "14.11.0",
     "ng-packagr": "16.2.0",
     "nodemon": "^2.0.22",
@@ -172,16 +176,16 @@
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "svelte": "3.59.1",
+    "svelte": "4.2.1",
     "svelte-check": "^3.4.3",
-    "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^5.0.4",
-    "ts-jest": "29.1.0",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.1.3",
-    "vite": "4.3.9",
+    "vite": "4.4.9",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2"
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.34.5"
   },
   "packageManager": "yarn@3.3.1"
 }
