fix search-widget-demo tests
When running `nx run-many --all --target=test`, search-widget-demo tests didn't pass anymore because we removed svelte-jester in a previous PR. This PR is fixing it.

--- a/apps/search-widget-demo/project.json
+++ b/apps/search-widget-demo/project.json
@@ -42,11 +42,9 @@
       }
     },
     "test": {
-      "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/apps/search-widget-demo"],
+      "executor": "nx:run-commands",
       "options": {
-        "jestConfig": "apps/search-widget-demo/jest.config.js",
-        "passWithNoTests": true
+        "command": "vitest -r=apps/search-widget-demo --run --passWithNoTests"
       }
     }
   }
