--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "tslib": "^2.3.0",
     "turndown": "^7.1.2",
     "tus-js-client": "^2.3.1",
+    "typedoc": "^0.25.2",
+    "typedoc-plugin-markdown": "^3.16.0",
     "uuid": "^7.0.3",
     "z-schema": "^4.2.2",
     "zone.js": "0.13.1"
