Update nx to 16.10.0 and angular to 16.2.12
patch and minor changes to remove dependabot problems

--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.1",
-    "@angular/cdk": "16.2.1",
-    "@angular/common": "16.2.1",
-    "@angular/compiler": "16.2.1",
-    "@angular/core": "16.2.1",
-    "@angular/forms": "16.2.1",
-    "@angular/platform-browser": "16.2.1",
-    "@angular/platform-browser-dynamic": "16.2.1",
-    "@angular/router": "16.2.1",
-    "@angular/service-worker": "16.2.1",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.12",
+    "@angular/common": "16.2.12",
+    "@angular/compiler": "16.2.12",
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@angular/platform-browser-dynamic": "16.2.12",
+    "@angular/router": "16.2.12",
+    "@angular/service-worker": "16.2.12",
     "@aws-sdk/client-s3": "^3.348.0",
     "@aws-sdk/s3-request-presigner": "^3.190.0",
     "@ng-web-apis/common": "^2.1.0",
@@ -50,7 +50,7 @@
     "@sentry/utils": "7.60.0",
     "@sveltejs/kit": "^1.15.2",
     "@sveltejs/package": "^2.0.2",
-    "angular-svg-icon": "^16.0.0",
+    "angular-svg-icon": "^16.1.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
@@ -91,24 +91,24 @@
     "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.0",
-    "@angular-devkit/core": "16.2.0",
-    "@angular-devkit/schematics": "16.2.0",
-    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-devkit/build-angular": "16.2.10",
+    "@angular-devkit/core": "16.2.10",
+    "@angular-devkit/schematics": "16.2.10",
+    "@angular-eslint/eslint-plugin": "16.2.0",
     "@angular-eslint/eslint-plugin-template": "16.1.0",
     "@angular-eslint/schematics": "16.1.0",
-    "@angular-eslint/template-parser": "16.1.0",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "16.2.1",
-    "@angular/language-service": "16.2.1",
+    "@angular-eslint/template-parser": "16.2.0",
+    "@angular/cli": "16.2.10",
+    "@angular/compiler-cli": "16.2.12",
+    "@angular/language-service": "16.2.12",
     "@biesbjerg/ngx-translate-extract": "7.0.4",
-    "@nx/angular": "16.7.1",
-    "@nx/eslint-plugin": "16.7.1",
-    "@nx/jest": "16.7.1",
-    "@nx/js": "16.7.1",
-    "@nx/linter": "16.7.1",
-    "@nx/node": "16.7.1",
-    "@nx/workspace": "16.7.1",
+    "@nx/angular": "16.10.0",
+    "@nx/eslint-plugin": "16.10.0",
+    "@nx/jest": "16.10.0",
+    "@nx/js": "16.10.0",
+    "@nx/linter": "16.10.0",
+    "@nx/node": "16.10.0",
+    "@nx/workspace": "16.10.0",
     "@nxext/svelte": "15.7.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-terser": "^0.3.0",
@@ -160,7 +160,7 @@
     "ng-mocks": "14.11.0",
     "ng-packagr": "16.2.0",
     "nodemon": "^2.0.22",
-    "nx": "16.7.1",
+    "nx": "16.10.0",
     "nx-electron": "^16.0.0-alpha.1",
     "postcss": "^8.4.31",
     "postcss-import": "15.0.0",
