Rename contributor into NucliaDB admin

--- a/apps/nucliadb-admin/src/environments_config/production/app-config.json
+++ b/apps/nucliadb-admin/src/environments_config/production/app-config.json
@@ -2,7 +2,7 @@
   "version": "STF_DOCKER_CONFIG_VERSION",
   "production": true,
   "backend": {
-    "app": "contributor",
+    "app": "nucliadb-admin",
     "apiPath": "/api",
     "siteKey": "",
     "sentry_environment": "prod",
