--- a/apps/nucliadb-admin/.eslintrc.json
+++ b/apps/nucliadb-admin/.eslintrc.json
@@ -10,7 +10,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "nco",
+            "prefix": "nad",
             "style": "camelCase"
           }
         ],
@@ -18,7 +18,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "nco",
+            "prefix": "nad",
             "style": "kebab-case"
           }
         ]
