--- a/apps/nucliadb-admin/project.json
+++ b/apps/nucliadb-admin/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "contributor",
+  "name": "nucliadb-admin",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "generators": {
@@ -8,24 +8,24 @@
       "changeDetection": "OnPush"
     }
   },
-  "sourceRoot": "apps/contributor/src",
-  "prefix": "nco",
+  "sourceRoot": "apps/nucliadb-admin/src",
+  "prefix": "nad",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/contributor",
-        "baseHref": "/contributor/",
-        "index": "apps/contributor/src/index.html",
-        "main": "apps/contributor/src/main.ts",
-        "polyfills": "apps/contributor/src/polyfills.ts",
-        "tsConfig": "apps/contributor/tsconfig.app.json",
+        "outputPath": "dist/apps/nucliadb-admin",
+        "baseHref": "/nucliadb-admin/",
+        "index": "apps/nucliadb-admin/src/index.html",
+        "main": "apps/nucliadb-admin/src/main.ts",
+        "polyfills": "apps/nucliadb-admin/src/polyfills.ts",
+        "tsConfig": "apps/nucliadb-admin/tsconfig.app.json",
         "allowedCommonJsDependencies": [],
         "inlineStyleLanguage": "scss",
         "assets": [
-          "apps/contributor/src/favicon.ico",
-          "apps/contributor/src/assets",
+          "apps/nucliadb-admin/src/favicon.ico",
+          "apps/nucliadb-admin/src/assets",
           {
             "glob": "**/*",
             "input": "libs/pastanaga/src/assets",
@@ -43,7 +43,7 @@
           },
           {
             "glob": "**/*",
-            "input": "apps/contributor/src/environments_config/local-stage",
+            "input": "apps/nucliadb-admin/src/environments_config/local-stage",
             "output": "assets/deployment"
           },
           {
@@ -52,9 +52,9 @@
             "output": "assets"
           }
         ],
-        "styles": ["apps/contributor/src/styles.scss"],
+        "styles": ["apps/nucliadb-admin/src/styles.scss"],
         "stylePreprocessorOptions": {
-          "includePaths": ["apps/contributor/src"]
+          "includePaths": ["apps/nucliadb-admin/src"]
         },
         "scripts": []
       },
@@ -74,14 +74,14 @@
           ],
           "fileReplacements": [
             {
-              "replace": "apps/contributor/src/environments/environment.ts",
-              "with": "apps/contributor/src/environments/environment.prod.ts"
+              "replace": "apps/nucliadb-admin/src/environments/environment.ts",
+              "with": "apps/nucliadb-admin/src/environments/environment.prod.ts"
             }
           ],
           "outputHashing": "all",
           "assets": [
-            "apps/contributor/src/favicon.ico",
-            "apps/contributor/src/assets",
+            "apps/nucliadb-admin/src/favicon.ico",
+            "apps/nucliadb-admin/src/assets",
             {
               "glob": "**/*",
               "input": "libs/pastanaga/src/assets",
@@ -99,7 +99,7 @@
             },
             {
               "glob": "**/*",
-              "input": "apps/contributor/src/environments_config/production",
+              "input": "apps/nucliadb-admin/src/environments_config/production",
               "output": "assets/deployment"
             },
             {
@@ -125,8 +125,8 @@
           "sourceMap": true,
           "namedChunks": true,
           "assets": [
-            "apps/contributor/src/favicon.ico",
-            "apps/contributor/src/assets",
+            "apps/nucliadb-admin/src/favicon.ico",
+            "apps/nucliadb-admin/src/assets",
             {
               "glob": "**/*",
               "input": "libs/pastanaga/src/assets",
@@ -144,7 +144,7 @@
             },
             {
               "glob": "**/*",
-              "input": "apps/contributor/src/environments_config/local-stage",
+              "input": "apps/nucliadb-admin/src/environments_config/local-stage",
               "output": "assets/deployment"
             },
             {
@@ -161,10 +161,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "contributor:build:production"
+          "browserTarget": "nucliadb-admin:build:production"
         },
         "local-stage": {
-          "browserTarget": "contributor:build:local-stage"
+          "browserTarget": "nucliadb-admin:build:local-stage"
         }
       },
       "defaultConfiguration": "development"
@@ -172,20 +172,20 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "contributor:build"
+        "browserTarget": "nucliadb-admin:build"
       }
     },
     "lint": {
       "executor": "@nx/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/contributor/**/*.ts", "apps/contributor/**/*.html"]
+        "lintFilePatterns": ["apps/nucliadb-admin/**/*.ts", "apps/nucliadb-admin/**/*.html"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/apps/contributor"],
+      "outputs": ["{workspaceRoot}/coverage/apps/nucliadb-admin"],
       "options": {
-        "jestConfig": "apps/contributor/jest.config.ts",
+        "jestConfig": "apps/nucliadb-admin/jest.config.ts",
         "passWithNoTests": true
       }
     }
