use `/admin` in the route instead of `/nucliadb-admin`

--- a/apps/nucliadb-admin/project.json
+++ b/apps/nucliadb-admin/project.json
@@ -16,7 +16,7 @@
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/apps/nucliadb-admin",
-        "baseHref": "/nucliadb-admin/",
+        "baseHref": "/admin/",
         "index": "apps/nucliadb-admin/src/index.html",
         "main": "apps/nucliadb-admin/src/main.ts",
         "polyfills": "apps/nucliadb-admin/src/polyfills.ts",
