--- a/apps/nucliadb-admin/project.json
+++ b/apps/nucliadb-admin/project.json
@@ -161,10 +161,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "nucliadb-admin:build:production"
+          "buildTarget": "nucliadb-admin:build:production"
         },
         "local-stage": {
-          "browserTarget": "nucliadb-admin:build:local-stage"
+          "buildTarget": "nucliadb-admin:build:local-stage"
         }
       },
       "defaultConfiguration": "development"
@@ -172,11 +172,11 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "nucliadb-admin:build"
+        "buildTarget": "nucliadb-admin:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": ["apps/nucliadb-admin/**/*.ts", "apps/nucliadb-admin/**/*.html"]
       }
@@ -185,8 +185,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/nucliadb-admin"],
       "options": {
-        "jestConfig": "apps/nucliadb-admin/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/nucliadb-admin/jest.config.ts"
       }
     }
   },
