--- a/apps/sistema-demo/project.json
+++ b/apps/sistema-demo/project.json
@@ -73,10 +73,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "sistema-demo:build:production"
+          "buildTarget": "sistema-demo:build:production"
         },
         "development": {
-          "browserTarget": "sistema-demo:build:development"
+          "buildTarget": "sistema-demo:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -84,11 +84,11 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "sistema-demo:build"
+        "buildTarget": "sistema-demo:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": ["apps/sistema-demo/src/**/*.ts", "apps/sistema-demo/src/**/*.html"]
       }
@@ -97,8 +97,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/apps/sistema-demo"],
       "options": {
-        "jestConfig": "apps/sistema-demo/jest.config.js",
-        "passWithNoTests": true
+        "jestConfig": "apps/sistema-demo/jest.config.js"
       }
     }
   },
