--- a/libs/common/project.json
+++ b/libs/common/project.json
@@ -9,8 +9,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/libs/common"],
       "options": {
-        "jestConfig": "libs/common/jest.config.js",
-        "passWithNoTests": true
+        "jestConfig": "libs/common/jest.config.js"
       }
     }
   },
