--- a/libs/search-widget/project.json
+++ b/libs/search-widget/project.json
@@ -5,7 +5,7 @@
   "projectType": "library",
   "targets": {
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "options": {
         "lintFilePatterns": ["libs/search-widget/**/*.{ts,svelte,spec.ts}"]
       }
