--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.12",
-    "@angular/cdk": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
-    "@angular/service-worker": "16.2.12",
+    "@angular/animations": "17.0.4",
+    "@angular/cdk": "17.0.1",
+    "@angular/common": "17.0.4",
+    "@angular/compiler": "17.0.4",
+    "@angular/core": "17.0.4",
+    "@angular/forms": "17.0.4",
+    "@angular/platform-browser": "17.0.4",
+    "@angular/platform-browser-dynamic": "17.0.4",
+    "@angular/router": "17.0.4",
+    "@angular/service-worker": "17.0.4",
     "@ng-web-apis/common": "^2.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -86,32 +86,31 @@
     "typedoc-plugin-markdown": "^3.16.0",
     "uuid": "^7.0.3",
     "z-schema": "^4.2.2",
-    "zone.js": "0.13.1"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.10",
-    "@angular-devkit/core": "16.2.10",
-    "@angular-devkit/schematics": "16.2.10",
-    "@angular-eslint/eslint-plugin": "16.2.0",
-    "@angular-eslint/eslint-plugin-template": "16.1.0",
-    "@angular-eslint/schematics": "16.1.0",
-    "@angular-eslint/template-parser": "16.2.0",
-    "@angular/cli": "16.2.10",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/language-service": "16.2.12",
+    "@angular-devkit/build-angular": "17.0.2",
+    "@angular-devkit/core": "17.0.2",
+    "@angular-devkit/schematics": "17.0.2",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.4",
+    "@angular/language-service": "17.0.4",
     "@biesbjerg/ngx-translate-extract": "7.0.4",
-    "@nx/angular": "16.10.0",
-    "@nx/eslint-plugin": "16.10.0",
-    "@nx/jest": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/linter": "16.10.0",
-    "@nx/node": "16.10.0",
-    "@nx/workspace": "16.10.0",
+    "@nx/angular": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/node": "17.1.3",
+    "@nx/workspace": "17.1.3",
     "@nxext/svelte": "15.7.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@schematics/angular": "16.2.0",
+    "@schematics/angular": "17.0.2",
     "@sveltejs/vite-plugin-svelte": "^2.4.6",
     "@testing-library/svelte": "^4.0.3",
     "@tsconfig/svelte": "^4.0.1",
@@ -136,8 +135,8 @@
     "@types/uuid": "^8.3.0",
     "@types/z-schema": "^3.24.0",
     "@types/zone.js": "^0.5.12",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "6.12.0",
+    "@typescript-eslint/parser": "6.12.0",
     "ajv-formats": "^2.1.1",
     "codelyzer": "6.0.2",
     "concurrently": "^8.0.1",
@@ -148,17 +147,17 @@
     "electron-notarize": "^1.2.1",
     "es-dirname": "^0.1.0",
     "eslint": "8.46.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-svelte": "^2.30.0",
     "exitzero": "^1.0.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "13.1.2",
+    "jest-preset-angular": "13.1.4",
     "jsdom": "^22.1.0",
     "ng-mocks": "14.11.0",
-    "ng-packagr": "16.2.0",
+    "ng-packagr": "17.0.2",
     "nodemon": "^2.0.22",
-    "nx": "16.10.0",
+    "nx": "17.1.3",
     "nx-electron": "^16.0.0-alpha.1",
     "postcss": "^8.4.31",
     "postcss-import": "15.1.0",
@@ -178,7 +177,7 @@
     "svelte-preprocess": "^5.0.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.1.3",
+    "typescript": "5.2.2",
     "vite": "4.4.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
