--- a/nginx/app.default.conf
+++ b/nginx/app.default.conf
@@ -4,6 +4,9 @@ server {
   root /dist/;
   index index.html;
   location / {
+      add_header Strict-Transport-Security "max-age=31536000" always;
+      add_header X-Frame-Options "SAMEORIGIN" always;
+
       try_files $uri /index.html =404;
   }
   error_page   500 502 503 504  /50x.html;
