--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "exitzero": "^1.0.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "jest-preset-angular": "13.1.4",
     "jsdom": "^22.1.0",
     "ng-mocks": "14.11.0",
     "ng-packagr": "17.0.2",
