--- a/apps/dashboard/project.json
+++ b/apps/dashboard/project.json
@@ -41,6 +41,11 @@
           },
           {
             "glob": "**/*",
+            "input": "libs/sync/src/assets/i18n",
+            "output": "assets/i18n/sync"
+          },
+          {
+            "glob": "**/*",
             "input": "apps/dashboard/src/environments_config/local",
             "output": "assets/deployment"
           },
@@ -100,6 +105,11 @@
             },
             {
               "glob": "**/*",
+              "input": "libs/sync/src/assets/i18n",
+              "output": "assets/i18n/sync"
+            },
+            {
+              "glob": "**/*",
               "input": "apps/dashboard/src/environments_config/production",
               "output": "assets/deployment"
             },
@@ -139,6 +149,11 @@
             },
             {
               "glob": "**/*",
+              "input": "libs/sync/src/assets/i18n",
+              "output": "assets/i18n/sync"
+            },
+            {
+              "glob": "**/*",
               "input": "apps/dashboard/src/environments_config/local-stage",
               "output": "assets/deployment"
             },
@@ -175,6 +190,11 @@
               "glob": "**/*",
               "input": "libs/user/src/assets/i18n",
               "output": "assets/i18n/user"
+            },
+            {
+              "glob": "**/*",
+              "input": "libs/sync/src/assets/i18n",
+              "output": "assets/i18n/sync"
             },
             {
               "glob": "**/*",
