--- a/nginx/app.default.conf
+++ b/nginx/app.default.conf
@@ -10,6 +10,9 @@ server {
       try_files $uri /index.html =404;
   }
   error_page   500 502 503 504  /50x.html;
+  # To allow POST on static pages
+  error_page  405     =200 $uri;
+
   location = /50x.html {
       root   /usr/share/nginx/html;
   }
