--- a/apps/search-widget-demo/project.json
+++ b/apps/search-widget-demo/project.json
@@ -4,28 +4,10 @@
   "sourceRoot": "apps/search-widget-demo/src",
   "projectType": "application",
   "targets": {
-    "build": {
-      "executor": "@nxext/vite:build",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/apps/search-widget-demo",
-        "assets": [
-          {
-            "glob": "/*",
-            "input": "./public/**",
-            "output": "./"
-          }
-        ],
-        "tsConfig": "apps/search-widget-demo/tsconfig.app.json"
-      },
-      "configurations": {
-        "production": {}
-      }
-    },
     "serve": {
-      "executor": "@nxext/vite:dev",
+      "executor": "nx:run-commands",
       "options": {
-        "outputPath": "dist/apps/search-widget-demo"
+        "command": "cd apps/search-widget-demo && vite"
       }
     },
     "lint": {
