--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "@ng-web-apis/common": "^2.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
-    "@nxext/vite": "15.1.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@sentry/angular": "7.60.0",
     "@sentry/electron": "^4.8.0",
@@ -106,14 +105,13 @@
     "@nx/js": "17.1.3",
     "@nx/node": "17.1.3",
     "@nx/workspace": "17.1.3",
-    "@nxext/svelte": "15.7.0",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
     "@schematics/angular": "17.0.2",
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@testing-library/svelte": "^4.0.3",
-    "@tsconfig/svelte": "^4.0.1",
+    "@tsconfig/svelte": "^5.0.2",
     "@types/core-js": "^2.5.4",
     "@types/cors": "^2.8.13",
     "@types/d3": "^6.7.0",
@@ -172,13 +170,13 @@
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "svelte": "4.2.1",
-    "svelte-check": "^3.4.3",
+    "svelte": "4.2.8",
+    "svelte-check": "^3.6.2",
     "svelte-preprocess": "^5.0.4",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
     "typescript": "5.2.2",
-    "vite": "4.5.2",
+    "vite": "^5.0.8",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.34.5"
