upgrade electron and eslint

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@sentry/angular": "7.60.0",
-    "@sentry/electron": "^4.8.0",
+    "@sentry/electron": "^4.17.0",
     "@sentry/node": "^7.60.0",
     "@sentry/tracing": "^7.2.0",
     "@sentry/utils": "7.60.0",
@@ -57,7 +57,7 @@
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
     "deepmerge-ts": "^5.1.0",
-    "electron-updater": "^5.0.1",
+    "electron-updater": "^6.1.7",
     "express": "^4.18.2",
     "fuse.js": "^3.6.1",
     "https": "^1.0.0",
@@ -138,11 +138,11 @@
     "concurrently": "^8.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "10.0.0",
-    "electron": "^24.8.5",
-    "electron-builder": "23.6.0",
-    "electron-notarize": "^1.2.1",
+    "electron": "^29.0.0-beta.4",
+    "electron-builder": "24.9.1",
+    "electron-notarize": "^1.2.2",
     "es-dirname": "^0.1.0",
-    "eslint": "8.48.0",
+    "eslint": "8.56.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-svelte": "^2.30.0",
     "exitzero": "^1.0.1",
@@ -154,7 +154,7 @@
     "ng-packagr": "17.1.2",
     "nodemon": "^2.0.22",
     "nx": "17.3.0",
-    "nx-electron": "^17.0.0-alpha.0",
+    "nx-electron": "^17.0.1",
     "postcss": "^8.4.31",
     "postcss-import": "15.1.0",
     "postcss-preset-env": "9.3.0",
