--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,9 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/consistent-indexed-object-style": ["error", "index-signature"]
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
