Update angular to version 17.2.0 and nx to 17.3.2

--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.1.1",
-    "@angular/cdk": "17.1.1",
-    "@angular/common": "17.1.1",
-    "@angular/compiler": "17.1.1",
-    "@angular/core": "17.1.1",
-    "@angular/forms": "17.1.1",
-    "@angular/platform-browser": "17.1.1",
-    "@angular/platform-browser-dynamic": "17.1.1",
-    "@angular/router": "17.1.1",
-    "@angular/service-worker": "17.1.1",
+    "@angular/animations": "17.2.1",
+    "@angular/cdk": "17.2.0",
+    "@angular/common": "17.2.1",
+    "@angular/compiler": "17.2.1",
+    "@angular/core": "17.2.1",
+    "@angular/forms": "17.2.1",
+    "@angular/platform-browser": "17.2.1",
+    "@angular/platform-browser-dynamic": "17.2.1",
+    "@angular/router": "17.2.1",
+    "@angular/service-worker": "17.2.1",
     "@ng-web-apis/common": "^2.1.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -47,7 +47,7 @@
     "@sentry/utils": "7.60.0",
     "@sveltejs/package": "^2.2.2",
     "angular-svg-icon": "^16.1.0",
-    "axios": "^1.6.1",
+    "axios": "1.6.7",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "child_process": "^1.0.2",
@@ -87,22 +87,22 @@
     "zone.js": "0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.1.1",
-    "@angular-devkit/core": "17.1.1",
-    "@angular-devkit/schematics": "17.1.1",
-    "@angular-eslint/eslint-plugin": "17.0.1",
-    "@angular-eslint/eslint-plugin-template": "17.0.1",
-    "@angular-eslint/template-parser": "17.0.1",
-    "@angular/cli": "~17.1.0",
-    "@angular/compiler-cli": "17.1.1",
-    "@angular/language-service": "17.1.1",
+    "@angular-devkit/build-angular": "17.2.0",
+    "@angular-devkit/core": "17.2.0",
+    "@angular-devkit/schematics": "17.2.0",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
+    "@angular/cli": "17.2.0",
+    "@angular/compiler-cli": "17.2.1",
+    "@angular/language-service": "17.2.1",
     "@biesbjerg/ngx-translate-extract": "7.0.4",
-    "@nx/angular": "17.3.0",
-    "@nx/eslint": "17.3.0",
-    "@nx/eslint-plugin": "17.3.0",
-    "@nx/jest": "17.3.0",
-    "@nx/node": "17.3.0",
-    "@nx/workspace": "17.3.0",
+    "@nx/angular": "17.3.2",
+    "@nx/eslint": "17.3.2",
+    "@nx/eslint-plugin": "17.3.2",
+    "@nx/jest": "17.3.2",
+    "@nx/node": "17.3.2",
+    "@nx/workspace": "17.3.2",
     "@rollup/plugin-inject": "^4.0.4",
     "@rollup/plugin-terser": "^0.3.0",
     "@rollup/plugin-typescript": "^8.3.0",
@@ -153,7 +153,7 @@
     "ng-mocks": "14.11.0",
     "ng-packagr": "17.1.2",
     "nodemon": "^2.0.22",
-    "nx": "17.3.0",
+    "nx": "17.3.2",
     "nx-electron": "^17.0.1",
     "postcss": "^8.4.31",
     "postcss-import": "15.1.0",
