Revert "run on self-hosted-runners (#1329)"
This reverts commit c0dfafdf4fb716e5e7a6ec657fed0f84846fbd15.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: nuclia-base
+    runs-on: ubuntu-latest
 
     outputs:
       deploy-widget: ${{ steps.check-deploy.outputs.deploy-widget }}
