--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,6 @@ env:
   MANAGER_IMAGE_NAME: manager
   CDN_STORAGE: ${{ secrets.CDN_STORAGE }}
   DOCS_STORAGE: ${{ secrets.DOCS_STORAGE }}
-  CONTAINER_REGISTRY: eu.gcr.io/${{ secrets.PROJECT_ID }}
 
 permissions:
   contents: write
@@ -109,6 +108,8 @@ jobs:
 
       - name: Build dashboard image
         if: steps.check-deploy.outputs.deploy-app == 'yes'
+        env:
+          CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
         run: |-
           docker build -t $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=app --build-arg appFolder=dashboard .
           docker tag $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$APP_IMAGE_NAME:main
@@ -127,6 +128,8 @@ jobs:
 
       - name: Build manager image
         if: steps.check-deploy.outputs.deploy-manager == 'yes'
+        env:
+          CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
         run: |-
           docker build -t $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=manager --build-arg appFolder=manager-v2 .
           docker tag $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:main
@@ -174,6 +177,8 @@ jobs:
 
       - name: Set helm package image
         id: version_step
+        env:
+          CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
         run: |-
           sed -i.bak "s#IMAGE_TO_REPLACE#$APP_IMAGE_NAME:${SHORT_SHA}#" ./charts/app/values.yaml
           sed -i.bak "s#CONTAINER_REGISTRY_TO_REPLACE#$CONTAINER_REGISTRY#" ./charts/app/values.yaml
@@ -229,6 +234,8 @@ jobs:
 
       - name: Set helm package image
         id: version_step
+        env:
+          CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
         run: |-
           sed -i.bak "s#IMAGE_TO_REPLACE#$MANAGER_IMAGE_NAME:${SHORT_SHA}#" ./charts/manager/values.yaml
           sed -i.bak "s#CONTAINER_REGISTRY_TO_REPLACE#$CONTAINER_REGISTRY#" ./charts/manager/values.yaml
